--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.0",
     "dom": "^0.0.3",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
